--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start:jobs": "APP_MODE=jobs nest start --watch",
     "prisma:client": "prisma generate",
     "prisma:ui": "prisma studio",
+    "prisma:dev": "prisma migrate dev --name",
+    "prisma:pull": "prisma db pull",
+    "prisma:push": "prisma db push",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
@@ -73,7 +76,7 @@
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   },
   "jest": {
