Basic queues, otps, mailing, templates;

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,17 +18,25 @@ services:
       - ${APP_PORT}:${APP_PORT}
     depends_on:
       - db
-  cron:
+      - cache
+
+  jobs:
     <<: *default-app
     ports: []
     command: yarn start:docker:jobs
+
+  processors:
+    <<: *default-app
+    ports: []
+    command: yarn start:docker:processors
+
   db:
     image: mysql:8.0
     restart: always
     hostname: ${MYSQL_HOST}
     volumes:
       - ./init:/docker-entrypoint-initdb.d
-      - ./db/data:/var/lib/mysql
+      - ./.volumes/db/data:/var/lib/mysql
     ports:
       - "${MYSQL_PORT}:${MYSQL_PORT}"
     environment:
@@ -36,3 +44,19 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB_NAME}
     user: 'mysql'
+
+  cache:
+    image: redis:7.0-alpine
+    restart: always
+    hostname: ${REDIS_HOST}
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    volumes:
+      - ./.volumes/cache/data:/data
