--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:jobs": "APP_MODE=jobs nest start --watch",
+    "start:processors": "APP_MODE=processors nest start --watch",
     "start:docker:dev": "yarn prisma:push && yarn prisma:client && yarn start:dev",
     "start:docker:jobs": "yarn prisma:push && yarn prisma:client && yarn start:jobs",
+    "start:docker:processors": "yarn prisma:push && yarn prisma:client && yarn start:processors",
     "prisma:client": "prisma generate",
     "prisma:ui": "prisma studio",
     "prisma:dev": "prisma migrate dev --name",
@@ -32,9 +34,14 @@
     "test:all": "yarn test && yarn test:e2e"
   },
   "dependencies": {
+    "@bull-board/api": "^4.6.4",
+    "@bull-board/express": "^4.6.4",
+    "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -42,10 +49,16 @@
     "@nestjs/swagger": "^6.1.2",
     "@prisma/client": "^4.5.0",
     "bcrypt": "^5.1.0",
+    "bull": "^4.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "handlebars": "^4.7.7",
+    "handlebars-layouts": "^3.1.4",
     "joi": "^17.6.3",
+    "moment": "^2.29.4",
     "nest-commander": "^3.1.0",
+    "nodemailer": "^6.8.0",
+    "nodemailer-postmark-transport": "^5.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -58,10 +71,12 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^4.10.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
